--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -13,7 +13,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
-    "web-vitals": "^5.0.3"
+    "web-vitals": "^5.0.3",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
