--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5173:80"
     networks:
-      - monitoring
+      - observability
 
   # NGINX service
   nginx:
@@ -17,10 +17,28 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf 
     networks:
-      - monitoring
+      - observability
     depends_on:
       - frontend 
+      - loki
 
+  alloy:
+    image: grafana/alloy:latest
+    volumes:
+      - ./alloy/config.alloy:/etc/alloy/config.alloy
+    command: ["run", "/etc/alloy/config.alloy"]
+    ports:
+      - "12345:12345"
+    networks:
+      - observability
+
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - observability
 networks:
-  monitoring:
+  observability:
     driver: bridge
