--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,33 @@
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
     server {
         listen 80;
         server_name localhost;
 
-        location /loki/ {
-            proxy_pass http://loki:3100;  # Proxy to Loki running on port 3100
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "http://localhost:5173";
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-                add_header Access-Control-Max-Age 1728000;  # Cache preflight response
-                add_header Content-Type "text/plain; charset=utf-8";
-                add_header Content-Length 0;
+        # Preflight request handling (must be before proxy location)
+        location /observing/ {
+            if ($request_method = OPTIONS ) {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=UTF-8';
+                add_header 'Content-Length' 0;
                 return 204;
             }
 
-            add_header Access-Control-Allow-Origin "http://localhost:5173" always;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+            # Actual requests
+            rewrite ^/observing/(.*)$ /$1 break;
+            proxy_pass http://loki:3100/;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With' always;
         }
     }
 }
