--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -13,9 +13,7 @@
     "@grafana/faro-react": "^1.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^6.0.0",
-    "react-router-dom": "^6.23.0",
-    "web-vitals": "^5.0.3"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
