feat: faro and grafana cloud

--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@grafana/faro-react": "^1.18.2",
+    "@grafana/faro-web-tracing": "^1.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
