--- a/contact-app/.env
+++ b/contact-app/.env
@@ -1,1 +1,1 @@
-VITE_FARO=https://faro-collector-prod-us-east-2.grafana.net/collect/b98b8b3eec6b3601e93ae686615b4d3d
+VITE_FARO=http://localhost:3101/observing/v1/otel
