--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -15,6 +13,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
+      - './infra/grafana/dashboards:/var/lib/grafana/dashboards'
+      - './infra/grafana/datasources:/etc/grafana/provisioning/datasources'
       - grafana-storage:/var/lib/grafana
     networks:
       - observability
@@ -39,22 +39,21 @@ services:
       - '--config.extra-args="-config.expand-env"'
       - '/etc/alloy/config.alloy'
     volumes:
-      - ./config.alloy:/etc/alloy/config.alloy
+      - ./infra/alloy/config.alloy:/etc/alloy/config.alloy
     networks:
       - observability
 
-  # nginx:
-  #   image: nginx:latest
-  #   ports:
-  #     - "3101:80"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #   depends_on:
-  #     - frontend
-  #     - alloy
-  #   networks:
-  #     - observability
-
+  nginx:
+    image: nginx:latest
+    ports:
+      - "3101:80"
+    volumes:
+      - ./infra/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - alloy
+    networks:
+      - observability
 volumes:
   grafana-storage:
 
