--- a/infra/grafana/datasources/datasource.yaml
+++ b/infra/grafana/datasources/datasource.yaml
@@ -10,13 +10,8 @@ datasources:
     orgId: 1
     url: 'http://loki:3100'
     basicAuth: false
-    isDefault: false
     version: 1
     editable: false
     uid: 'loki'
     jsonData:
-      derivedFields:
-        - datasourceUid: 'tempo'
-          matcherRegex: 'traceID=(\w+)'
-          name: 'TraceID'
-          url: '$${__value.raw}'
+      maxLines: 1000
